--- a/angular.json
+++ b/angular.json
@@ -38,21 +38,39 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "1MB",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "10kB",
+                  "maximumError": "15kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "budgets": []
+            },
+            "separated": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.separated.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -65,6 +83,9 @@
             },
             "development": {
               "buildTarget": "Library-Management-System-AI:build:development"
+            },
+            "separated": {
+              "buildTarget": "Library-Management-System-AI:build:separated"
             }
           },
           "defaultConfiguration": "development"
