--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:separated": "ng serve --configuration=separated",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production",
+    "build:separated": "ng build --configuration=separated",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "backend:start": "cd backend-api && npm start",
+    "backend:dev": "cd backend-api && npm run dev",
+    "backend:install": "cd backend-api && npm install",
+    "dev:full": "concurrently \"npm run backend:start\" \"npm start\"",
+    "dev:separated": "concurrently \"npm run backend:start\" \"npm run start:separated\"",
+    "setup": "npm install && npm run backend:install"
   },
   "prettier": {
     "overrides": [
@@ -38,6 +47,8 @@
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^20.0.6",
     "@types/jasmine": "~5.1.0",
+    "concurrently": "^9.1.0",
+    "dotenv": "^17.1.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
